add function edit and delete,
