# docs/swagger.json
@@ -15,7 +15,7 @@
         "version": "1.0"
     },
     "host": "localhost:3000/api",
-    "basePath": "/",
+    "basePath": "localhost:3000/api",
     "paths": {
         "/article": {
             "post": {
@@ -33,11 +33,11 @@
                 "parameters": [
                     {
                         "description": "the body to create a Article",
-                        "name": "body",
+                        "name": "Body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.CreateArticleRequest"
+                            "$ref": "#/definitions/controllers.ArticleRequest"
                         }
                     }
                 ],
@@ -45,7 +45,8 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controllers.CreateArticleRequest"
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     }
                 }
@@ -77,7 +78,79 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Posts"
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Edit article by Id.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Article"
+                ],
+                "summary": "Edit article By ID.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "article id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "the body to update a Article",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ArticleRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete article by Id.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Article"
+                ],
+                "summary": "Delete article By ID.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "article id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     }
                 }
@@ -116,10 +189,8 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Posts"
-                            }
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     }
                 }
@@ -127,49 +198,34 @@
         }
     },
     "definitions": {
-        "controllers.CreateArticleRequest": {
+        "controllers.ArticleRequest": {
             "type": "object",
+            "required": [
+                "category",
+                "content",
+                "status",
+                "title"
+            ],
             "properties": {
                 "category": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 3
                 },
                 "content": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 200
                 },
                 "status": {
-                    "type": "string"
+                    "type": "string",
+                    "enum": [
+                        "publish",
+                        "draft",
+                        "thrash"
+                    ]
                 },
                 "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Posts": {
-            "type": "object",
-            "properties": {
-                "category": {
-                    "type": "string"
-                },
-                "content": {
-                    "type": "string"
-                },
-                "createdDate": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "status": {
-                    "type": "string"
-                },
-                "timestamp": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "updatedDate": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 20
                 }
             }
         }
