# internal/controllers/article_controllers.go
@@ -1,17 +1,54 @@
 package controllers
 
 import (
+	"fmt"
+
 	"github.com/alwialdi9/backend-sv/config"
 	"github.com/alwialdi9/backend-sv/internal/models"
+	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
 	log "github.com/sirupsen/logrus"
 )
 
-type CreateArticleRequest struct {
-	Title    string `json:"title"`
-	Content  string `json:"content"`
-	Category string `json:"category"`
-	Status   string `json:"status"`
+type ArticleRequest struct {
+	Title    string `json:"title" validate:"required,min=20"`
+	Content  string `json:"content" validate:"required,min=200"`
+	Category string `json:"category" validate:"required,min=3"`
+	Status   string `json:"status" validate:"required,oneof=publish draft thrash"`
+}
+
+// Inisialisasi Validator
+var validate = validator.New()
+
+// Custom Pesan Error
+var customMessages = map[string]string{
+	"Title.required":    "Judul wajib diisi",
+	"Title.min":         "Judul minimal harus 20 karakter",
+	"Content.required":  "Konten wajib diisi",
+	"Content.min":       "Konten minimal harus 200 karakter",
+	"Category.required": "Kategori wajib diisi",
+	"Category.min":      "Kategori minimal harus 3 karakter",
+	"Status.required":   "Status wajib diisi",
+	"Status.oneof":      "Status harus diantara publish, draft, thrash",
+}
+
+func ValidateStruct(s interface{}) map[string]string {
+	errors := make(map[string]string)
+	err := validate.Struct(s)
+	if err != nil {
+		for _, e := range err.(validator.ValidationErrors) {
+			field := e.Field()
+			tag := e.Tag()
+			key := fmt.Sprintf("%s.%s", field, tag)
+
+			if msg, exists := customMessages[key]; exists {
+				errors[field] = msg
+			} else {
+				errors[field] = fmt.Sprintf("Field %s tidak valid", field)
+			}
+		}
+	}
+	return errors
 }
 
 // @Summary Add article.
@@ -19,19 +56,27 @@ type CreateArticleRequest struct {
 // @Tags Article
 // @Accept json
 // @Produce json
-// @Param body json CreateArticleRequest true "the body to create a Article"
-// @Success 200 object CreateArticleRequest
+// @Param Body body ArticleRequest true "the body to create a Article"
+// @Success 200 object map[string]interface{}
 // @Router /article [POST]
 func CreateArticle(c *fiber.Ctx) error {
 
-	var req CreateArticleRequest
+	var req ArticleRequest
 	err := c.BodyParser(&req)
 	if err != nil {
 		log.WithError(err).Error("Realtime sync handler: parse bad request")
 		return fiber.ErrBadRequest
 	}
 
-	result := config.DB.Create(&req)
+	// Validasi request
+	errors := ValidateStruct(req)
+	if len(errors) > 0 {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"errors": errors,
+		})
+	}
+
+	result := config.DB.Table("posts").Create(&req)
 
 	if result.Error != nil {
 		log.WithError(result.Error).Error("Failed to create article")
@@ -55,7 +100,7 @@ func CreateArticle(c *fiber.Ctx) error {
 // @Produce json
 // @Param limit path integer true "article limit"
 // @Param offset path integer true "article offset"
-// @Success 200 object []models.Posts{}
+// @Success 200 object map[string]interface{}
 // @Router /article/:limit/:offset [GET]
 func GetArticle(c *fiber.Ctx) error {
 	limit, _ := c.ParamsInt("limit", 10)
@@ -63,7 +108,7 @@ func GetArticle(c *fiber.Ctx) error {
 
 	var data []models.Posts
 
-	result := config.DB.Select("title", "content", "category", "status").Limit(limit).Offset(offset).Find(&data)
+	result := config.DB.Select("id", "title", "content", "category", "status").Limit(limit).Offset(offset).Find(&data)
 
 	if result.Error != nil {
 		log.WithError(result.Error).Error("Failed to Get article")
@@ -88,14 +133,14 @@ func GetArticle(c *fiber.Ctx) error {
 // @Accept json
 // @Produce json
 // @Param id path string true "article id"
-// @Success 200 object models.Posts{}
+// @Success 200 object map[string]interface{}
 // @Router /article/:id [GET]
 func GetArticleById(c *fiber.Ctx) error {
 	id := c.Params("id")
 
 	var data models.Posts
 
-	result := config.DB.Select("title", "content", "category", "status").Where("id = ?", id).Find(&data)
+	result := config.DB.Select("id", "title", "content", "category", "status").Where("id = ?", id).First(&data)
 
 	if result.Error != nil {
 		log.WithError(result.Error).Error("Failed to Get article")
@@ -108,6 +153,117 @@ func GetArticleById(c *fiber.Ctx) error {
 	response := map[string]interface{}{
 		"status": "success",
 		"data":   data,
+	}
+	return c.JSON(response)
+}
+
+// @Summary Edit article By ID.
+// @Description Edit article by Id.
+// @Tags Article
+// @Accept json
+// @Produce json
+// @Param id path string true "article id"
+// @Param Body body ArticleRequest true "the body to update a Article"
+// @Success 200 object map[string]interface{}
+// @Router /article/:id [POST]
+func EditArticle(c *fiber.Ctx) error {
+	var req ArticleRequest
+	err := c.BodyParser(&req)
+	if err != nil {
+		log.WithError(err).Error("parse bad request")
+		return fiber.ErrBadRequest
+	}
+
+	// Validasi request
+	errors := ValidateStruct(req)
+	if len(errors) > 0 {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"errors": errors,
+		})
+	}
+	id, err := c.ParamsInt("id", 0)
+
+	if err != nil {
+		log.WithError(err).Error("Failed to parse article id")
+		return c.JSON(map[string]interface{}{
+			"status":  "failed",
+			"message": "Failed to parse article id",
+		})
+	}
+
+	if id == 0 {
+		return c.JSON(map[string]interface{}{
+			"status":  "failed",
+			"message": "Id not found",
+		})
+	}
+
+	var data models.Posts
+
+	result := config.DB.Where("id = ?", id).First(&data)
+
+	if result.Error != nil {
+		log.WithError(result.Error).Error(fmt.Sprintf("Failed to Get article with id %d", id))
+		return c.JSON(map[string]interface{}{
+			"status":  "failed",
+			"message": fmt.Sprintf("Failed to Get article with id %d", id),
+		})
+	}
+
+	data.Title = req.Title
+	data.Content = req.Content
+	data.Category = req.Category
+	data.Status = req.Status
+	data.ID = uint(id)
+
+	config.DB.Save(&data)
+
+	response := map[string]interface{}{
+		"status": "success",
+	}
+	return c.JSON(response)
+}
+
+// @Summary Delete article By ID.
+// @Description Delete article by Id.
+// @Tags Article
+// @Accept json
+// @Produce json
+// @Param id path integer true "article id"
+// @Success 200 object map[string]interface{}
+// @Router /article/:id [DELETE]
+func DeleteArticle(c *fiber.Ctx) error {
+	id, err := c.ParamsInt("id", 0)
+
+	if err != nil {
+		log.WithError(err).Error("Failed to parse article id")
+		return c.JSON(map[string]interface{}{
+			"status":  "failed",
+			"message": "Failed to parse article id",
+		})
+	}
+
+	if id == 0 {
+		return c.JSON(map[string]interface{}{
+			"status":  "failed",
+			"message": "Id not found",
+		})
+	}
+
+	var data models.Posts
+
+	result := config.DB.Delete(&data, id)
+
+	if result.Error != nil {
+		log.WithError(result.Error).Error(fmt.Sprintf("Failed to Delete article with id %d", id))
+		return c.JSON(map[string]interface{}{
+			"status":  "failed",
+			"message": fmt.Sprintf("Failed to Delete article with id %d", id),
+		})
+	}
+
+	response := map[string]interface{}{
+		"status": "success",
 	}
 	return c.JSON(response)
 }
